--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+base64 = "0.22.1"
 cd-da-reader = "0.1.0"
+sha1 = "0.10.6"
 ureq = "3.1.0"
 windows = { version = "0.61.3", features = [
     "Win32_Storage_FileSystem",
