--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2024"
 [dependencies]
 base64 = "0.22.1"
 cd-da-reader = "0.1.0"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.143"
 sha1 = "0.10.6"
-ureq = "3.1.0"
+ureq = { version = "3.1.0", features = ["json"] }
 windows = { version = "0.61.3", features = [
     "Win32_Storage_FileSystem",
     "Win32_System_SystemServices",
